--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -82,7 +82,7 @@ $endif$
 % \br -> muda para o português
 % \texten{blah} -> o texto "blah" é em inglês
 % \textbr{blah} -> o texto "blah" é em português
-\babeltags{br = brazilian, en = english}
+\babeltags{br=brazilian,en=english}
 
 % Bibliografia
 \usepackage[
@@ -154,12 +154,12 @@ $endif$
   % É qualificação?
   %quali,
   programa={Estatística},
-  membrobanca={Prof. Dr. Victor Fossaluza (orientadora) -- IME-USP [sem ponto final]},
+  membrobanca={Prof. Dr. Victor Fossaluza (orientador) -- IME-USP},
   % Em inglês, não há o "ª"
   %membrobanca{Prof. Dr. Fulana de Tal (advisor) -- IME-USP [sem ponto final]},
-  membrobanca={Prof. Dr. Rafael Izbicki -- UFSCar [sem ponto final]},
-  membrobanca={Prof. Dr. Rafael Stern -- IME-USP [sem ponto final]},
-  membrobanca={Prof. Dr. Renato Vicente -- IME-USP [sem ponto final]},
+  membrobanca={Prof. Dr. Rafael Izbicki -- UFSCar},
+  membrobanca={Prof. Dr. Rafael Stern -- IME-USP},
+  membrobanca={Prof. Dr. Renato Vicente -- IME-USP},
   % Se não houve bolsa, remova
   %
   % Norma sobre agradecimento por auxílios da FAPESP:
@@ -243,7 +243,6 @@ $endif$
 %%%%%%%%%%%%%%%%%%%%%%% AQUI COMEÇA O CONTEÚDO DE FATO %%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%% CAPA E PÁGINAS INICIAIS %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -264,6 +263,7 @@ $endif$
 
 \begin{dedicatoria}
 Aos meus pais,
+Cidimir e Vera
 \end{dedicatoria}
 
 % Reinicia o contador de páginas (a próxima página recebe o número "i") para
@@ -300,6 +300,41 @@ Também gostaria de agradecer a uma instituição, o Instituto de Matemática e 
 Finalmente, agradeço aos meus pais, Cidimir e Vera, e ao meu irmão Lucas, por estarem sempre me apoiando e me cobrando sobre o doutorado. Sem esse apoio, provavelmente teria desistido no meio o caminho.
 
 % \input{conteudo/resumoabstract}
+
+% As palavras-chave são obrigatórias, em português e em inglês, e devem ser
+% definidas antes do resumo/abstract. Acrescente quantas forem necessárias.
+
+\palavrachave{captcha}
+\palavrachave{aprendizado de máquinas}
+\palavrachave{aprendizado estatístico}
+\palavrachave{aprendizado fracamente supervisionado}
+\palavrachave{rótulos parciais}
+\palavrachave{rótulos complementares}
+\palavrachave{raspagem de dados}
+
+\keyword{captcha}
+\keyword{machine learning}
+\keyword{statistical learning}
+\keyword{weak supervised learning}
+\keyword{partial label}
+\keyword{complementary label}
+\keyword{web scraping}
+
+% O resumo é obrigatório, em português e inglês. Estes comandos também
+% geram automaticamente a referência para o próprio documento, conforme
+% as normas sugeridas da USP
+
+
+\resumo{
+Captcha (Completely Automated Public Turing tests to tell Computers and Humans Apart), é um desafio utilizado para identificar se o acesso à uma página na internet é realizada por uma pessoa ou uma máquina. O desafio é projetado para ser fácil de resolver por humanos, mas difícil de resolver por máquinas. A utilização de Captchas em serviços públicos pode ser prejudicial à população, limitando o acesso a dados e incentivando empresas a contratarem serviços que utilizam mão de obra humana para resolução dos Captchas. Este trabalho tem como foco os Captchas com textos (números e letras) em imagens. Já existem soluções para resolver Captchas deste tipo utilizando aprendizado de máquinas, sendo as redes neurais profundas os modelos com melhor desempenho. No entanto, esses modelos precisam de grandes bases de dados anotadas ou de procedimentos de ajuste intrincados e pouco acessíveis. Neste trabalho, é proposta um método inovador, chamado Web Automatic Weak Learning (WAWL), que alia técnicas de raspagem de dados e aprendizado de máquinas com rótulos parciais, que utiliza dados obtidos automaticamente da internet para acelerar o ajuste dos modelos. O método é agnóstico à arquitetura utilizada para o modelo, sendo necessário realizar apenas uma adaptação na função de perda. O método apresenta resultados significativos, aumentando a acurácia inicial de modelos fracos em mais de 30\% nos mais de 10 Captchas estudados, sem a necessidade de realizar uma nova rodada anotação manual. Adicionalmente, pacote computacional novo foi desenvolvido para resolver Captchas e disponibilizar os resultados para outras pessoas. Espera-se que o trabalho possa reduzir o incentivo econômico de contratar serviços que utilizam mão de obra humana para resolver Captchas.
+}
+
+\clearpage
+
+\abstract{
+Captchas, or Completely Automated Public Turing tests to tell Computers and Humans Apart, are challenges designed to differentiate between human and machine access to web pages. While Captchas are intended to be easy for humans to solve, they can pose a challenge for machines. Their use in public services can limit access to public data and incentivize companies to hire services that use human labor to solve them. In this work, we propose a new method called Web Automatic Weak Learning (WAWL), which combines web scraping and machine learning with partial labels techniques to quickly and accurately fit models to solve Captchas with text in images. Our method is agnostic to the model architecture and only requires a small adaptation of the loss function. By increasing the accuracy of weak initial models by more than 30\% on various Captchas studied, our method can reduce the economic incentive to hire services that use human labor to solve Captchas. We have also developed a computational package to easily solve Captchas and make our results available to the developer community.
+}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%% LISTAS DE FIGURAS ETC. %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -405,10 +440,42 @@ Finalmente, agradeço aos meus pais, Cidimir e Vera, e ao meu irmão Lucas, por 
    XML & eXtensible Markup Language
 \end{tabular}
 
-\clearpage
+\chapter*{Lista de símbolos}
+% \disablenewpage{\chapter*{Lista de símbolos}}
 
-%\chapter*{Lista de símbolos}
-\disablenewpage{\chapter*{Lista de símbolos}}
+\begin{displaymath}
+\begin{array}{ll}
+   x & \text{imagem (na forma de matriz)}\\
+   N & \text{linhas de uma imagem (altura)}\\
+   M & \text{colunas de uma imagem (largura)}\\
+   R & \text{canais de uma imagem (cores)}\\
+   c & \text{caractere}\\
+   L & \text{comprimento do Captcha}\\
+   \mathcal A & \text{alfabeto (quantidade de caracteres distintos possíveis)}\\
+   y & \text{variável resposta (observada), na forma de matriz}\\
+   \mathcal U & \text{distribuição uniforme}\\
+   X & \text{variável aleatória representando a imagem}\\
+   Y & \text{variável aleatória representando a matriz-resposta}\\
+   f, g, h & \text{função preditiva, que leva uma imagem a uma estimativa para } Y\\
+   \hat Y & \text{estimativa para } Y\\
+   \mathcal Y & \text{valores possíveis da variável resposta}\\
+   \mathcal O & \text{função do oráculo}\\
+   K & \text{Kernel (núcleo) em uma operação de convolução}\\
+   \epsilon & \text{erro ou valor pequeno}\\
+   \beta & \text{viés (intercepto) em um passo de batch normalization}\\
+   \gamma & \text{parâmetro em um passo de batch normalization}\\
+   I & \text{função indicadora}\\
+   \ell & \text{log-verossimilhança}\\
+   \theta & \text{parâmetros de um modelo}\\
+   \nabla & \text{gradiente (vetor de derivadas parciais)}\\
+   m,v,\hat m, \hat v, \beta_2, \beta_2, \epsilon & \text{parâmetros do otimizador ADAM}\\
+   \mathcal L & \text{função de perda}\\
+   \mathcal R & \text{função de risco}\\
+   Q & \text{matriz de transição em um modelo com rótulos complementares}\\
+   \hat f & \text{estimativa de uma função preditiva}\\
+   \bar y & \text{observação complementar de } y \text{ (ou seja, tudo menos } y \text{)}
+\end{array}
+\end{displaymath}
 
 % Quebra de página manual
 \clearpage
